# sfa

./: .gitignore  LICENSE  README.md  pyproject.toml
data/celebdf/: split_info.json
data/deeperforensics/: split_info.json
data/dfdcp/: split_info.json
data/faceshifter/: split_info.json
scripts/: configure_data_paths.py  crop_faces.py  test.py
src/sfa/datasets/: __init__.py  augmentation.py  config.py  constants.py  dataset.py
src/sfa/models/: __init__.py  encoder.py  modules.py  sfa.py
src/sfa/test/: tester.py
src/sfa/utils/: meter.py  metrics.py  random.py  video.py
